# app/models/users.js
@@ -62,6 +62,10 @@ module.exports = (sequelize, Sequelize) => {
     routine_count: {
       type: Sequelize.VIRTUAL
     },
+    expiry_date: {
+      type: Sequelize.STRING
+
+    },
     video_count: {
       type: Sequelize.VIRTUAL
     },
@@ -73,7 +77,8 @@ module.exports = (sequelize, Sequelize) => {
       get() {
         return (this.getDataValue('status')=='active') ? true : false;
       }
-    }
+    },
+    
   },
     {
       createdAt: 'created_at',
